openapi jam schema added
